--- a/main.tex
+++ b/main.tex
@@ -64,59 +64,94 @@
 
 \section{Education}
 
-\cventry{2015.1--2019.12}{B. Eng. in Systems and Computer Engineering}{}{}{\textit{Department of Systems and Computer Engineering, \link[Universidad de Los Andes]{https://sistemas.uniandes.edu.co/en/}, Bogota, Colombia }}{}
+\cventry{2015.1--2019.12}{B. Eng. in Systems and Computer Engineering}{}{}{\textit{Department of Systems and Computer Engineering, \link[\textbf{Universidad de Los Andes}]{https://sistemas.uniandes.edu.co/en/}, Bogota, Colombia }}{}
 
 %----------------------------------------------------------------------------------------
-%	INTERESTS SECTION
+%	Research Job Experience SECTION
 %----------------------------------------------------------------------------------------
+\section{Research Job Experience}
+
+\cvitem{2019.5--2019.8}{\textit{\textbf{Research Assistant Intern} at \textbf{Cornell Tech} in the Enhancing Ability Lab (\textbf{Accessibility}) with \href{http://shiriazenkot.com/}{Assistant Professor \textcolor{blue}{Shiri Azenkot}, under the program SURF ``Summer Undergraduate \textbf{Research Fellowship}``}}}
+\cvitem{}{\texit{Developed a pipeline for teachers of the visually impaired (TVI) to design and use interactive 3d models to teach visually impaired students}}
+
+\cvitem{}{\texit{Redesigned and improved a modelling plugin, \href{https://github.com/rgonzalezp/Markit}{\textcolor{blue}{Markit}}, for TVI's to annotate models. In Blender, 3d modelling software, through Python scripting}}
+\cvitem{}{\texit{Designed, developed and deployed a website (including front end and back end) to host the models through AWS}}
+\cvitem{}{\texit{Modified \href{http://leiatlarge.com/3d_prints_cv/}{\textcolor{blue}{Talkit}}, the iOS application, to be compatible with the pipeline. This means making possible to download inside Talkit the models hosted in the website}}
 
 
-% \renewcommand{\listitemsymbol}{-~} % Changes the symbol used for lists
-% \cvlistdoubleitem{Piano}{}
-% \cvlistitem{Baseball}
+\cvitem{2019.8--Present}{\textit{\textbf{Research Assistant Volunteer} at \textbf{Cornell Tech} in the Enhancing Ability Lab (\textbf{Accessibility}) with \href{http://shiriazenkot.com/}{Assistant Professor \textcolor{blue}{Shiri Azenkot}}}}
+\cvitem{}{\texit{Continuing to work on the deployment of the 3D interactive models pipeline to make it usable by the public}}
+
+\cvitem{}{\texit{Presented \textbf{Molder} demo in \textbf{ASSETS `19} on behalf of \href{http://shiriazenkot.com/}{Professor \textcolor{blue}{Shiri}} and \href{http://leiatlarge.com/research/}{\textcolor{blue}{Lei Shi}}, see more in the Research Work section}}
+ 
+
+\cvitem{2019.2--Present}{\textit{\textbf{Research Assistant} at \textbf{Universidad de Los Andes}, group IMAGINE, with \href{https://www.researchgate.net/profile/Jose_Hernandez210}{Associate Professor \textcolor{blue}{Jose Tiberio Hernandez}}}}
+\cvitem{}{\texit{Develop an \textbf{educational platform} to \textbf{innovate} the way students` access and study Radiographies in the Radiology discipline:}}
+\cvitem{}{\texit{Designed and developed a prototype of a web-solution in which Radiology students can \textbf{study} and \textbf{explore ``data samples``} of subjects of interest through \textbf{data visualizations}. Students can also explore in depth Radiographies, using a Radiography Web-viewer. Paper in progress.}}
+\cvitem{}{\texit{\textbf{Obtained 60.000.000 Colombian pesos grant} to develop a full-fledged version of the platform and implement it in the Hospital Militar Central (Colombia, Bogota)}}
+\cvitem{}{\texit{Collaborating with a group of doctors and Radiology students in the Hospital Militar Central working in the research department of the Hospital}}
+
+\cvitem{2018.8--2019.1}{\textit{\textbf{Research Assistant Volunteer} at \textbf{Universidad de Los Andes} with \href{http://johnguerra.co/}{Assistant Professor \textcolor{blue}{John Guerra-Gomez}}}}
+\cvitem{}{\texit{Developed a system, Tactiled, in which we make tactile graphics more available through machine learning and crowdsourcing}}
+\cvitem{}{\texit{Worked on the architecture of the Machine Learning model that classifies whether images can be transformed into a reliable tactile version of the image or not}}
+\cvitem{}{\texit{Worked on the web application design and development. This system is hosted on google cloud platform and managed through cloud functions}}
 
 %----------------------------------------------------------------------------------------
-%	Achievements SECTION
+%	Research Work and Publications SECTION
 %----------------------------------------------------------------------------------------
 
 \section{Research Work and Publications}
-\cvitem{Current}{\textit{Molder: Paper in submission, \textbf{Co-author}, \textbf{CHI2020}}}
+\cvitem{Present}{\textit{\textbf{Molder}: Paper in submission, \textbf{Co-author}, \textbf{CHI2020}}}
 \cvitem{}{\texit{Molder is an accessible design tool for interactive tactile maps, an important type of printed materials that can help students learn O\&M skills. Molder provides a simplified design process and easy-to-learn functions. A designer uses Molder to design a map using tangible input techniques and accessible feedback. Molder contributes an interaction paradigm towards accessible modeling.}}
 
-\cvitem{2019.10}{\textit{Tactiled: Poster in \textbf{ASSETS `19} (\%58 acceptance)}}
+\cvitem{2019.10}{\textit{\textbf{Tactiled}: Poster in \textbf{ASSETS `19} (\%58 acceptance)}}
 \cvitem{}{\texit{\textbf{Gonzalez, R.}, Gonzalez, C., \& Guerra-Gomez, J. A. (2019). Tactiled. The 21st International ACM SIGACCESS Conference on Computers and Accessibility - ASSETS ’19. Presented at the The 21st International ACM SIGACCESS Conference.}}
 
-
-%----------------------------------------------------------------------------------------
-%	AWARDS SECTION
-%----------------------------------------------------------------------------------------
-%\section{Certifications}
-
-%\cventry{April 2015 -- April 2017}{Certified LabVIEW Associate Developer}{\textsc{National Instruments}}{}{}{}
-
-
-%----------------------------------------------------------------------------------------
-%	Research SECTION
-%----------------------------------------------------------------------------------------
-
-
-%----------------------------------------------------------------------------------------
-%	Techincal Projects SECTION
-%----------------------------------------------------------------------------------------
-
-
+\cvitem{2019.8}{\textit{\href{https://github.com/rgonzalezp/Markit}{\textcolor{blue}{Markit}}}}
+\cvitem{}{\texit{\textbf{Ricardo Enrique Gonzalez Penuela}, \& Lei Shi. (2019, November 2). rgonzalezp/Markit: Markit V1.0 (Version V1.0). Zenodo. http://doi.org/10.5281/zenodo.3526177}}
 
 
 
 %----------------------------------------------------------------------------------------
-%	Course Projects SECTION
+%	Industry Job Experience SECTION
+%----------------------------------------------------------------------------------------
+\section{Industry Job Experience}
+
+\cvitem{2018.1--2018.6}{\textbf{Developer/Test Automation intern} at \textbf{Endava}, a British based software development company}
+\cvitem{}{\textit{Developed new modules for a test accelerator, a framework used by the company to create testing suites for new software products}}
+
+\cvitem{} {\textit{Automated UI tests for social media platforms}}
+
+\cvitem{} {\textit{\textbf{Key Technologies}: Java, Selenium, Cucumber, Serenity, Postman, Git, DB2, Jenkins, AWS, Maven, Jira and JMeter}}
+
+
+
+%----------------------------------------------------------------------------------------
+%	Teaching Job Experience SECTION
+%----------------------------------------------------------------------------------------
+\section{Teaching Job Experience}
+
+\cvitem{Spring 2019} {\textit{Teacher assistant: \textbf{Programming with web technologies}, Senior year course, fundamental to learn how to use web development tools and students need to use all previous courses knowledge to develop multiple full stack solutions. \textbf{Universidad de Los Andes}}}
+
+\cvitem{} {\textit{Worked with Assistant Professor Jose Bocanegra to develop the course material}}
+
+\cvitem{Spring 2016, Fall 2016} {\textit{Teacher assistant: \textbf{Object oriented programming II}, Freshman year course, students learn recursive programming, sorting algorithms and other fundamentals of programming. \textbf{Universidad de Los Andes}}}
+
+\cvitem{} {\textit{Aided the Professor to grade the students exams, homework and supported in the teaching/lab sessions}}
+
+
+
+
+
+%----------------------------------------------------------------------------------------
+%	Awards and Media SECTION
 %----------------------------------------------------------------------------------------
 
 \section{Awards and Media}
 \cvitem{}{\textit{\textbf{Media}}}
 \cvitem{2019.6}{\textit{Note on \textbf{Assistive Technologies} work in \textbf{El Espectador} newspaper: \href{https://www.elespectador.com/noticias/ciencia/ingenieros-colombianos-desarrollan-herramientas-para-ayudar-personas-ciegas-articulo-870825}{\textcolor{blue}{``Colombian engineers develop tools to help blind people``}}}}
 \cvitem{}{\textit{\textbf{Award}}}
-\cvitem{2017.10}{\textit{\textbf{2nd place} in the II security marathon: Inter-university competition with security problems like CTF 365 held in the \textbf{Universidad de Los Andes}. Worked with: Networking, stenography, cryptography, reverse engineering.\href{https://uniandes.edu.co/noticias/educacion/segunda-version-de-las-maratones-de-seguridad}{\textcolor{blue}{``II security marathon``}}}}
+\cvitem{2017.10}{\textit{\textbf{2nd place} in the II \textbf{security marathon}: Inter-university competition with security problems like CTF 365 held in the \textbf{Universidad de Los Andes}. Challenges related to: Networking, stenography, cryptography, reverse engineering.\href{https://uniandes.edu.co/noticias/educacion/segunda-version-de-las-maratones-de-seguridad}{\textcolor{blue}{``II security marathon``}}}}
 \cvitem{}{\textit{\textbf{Award}}}
 \cvitem{2015.5}{\textit{\textbf{Best} undergraduate \textbf{freshman project} in the Department of Systems and Computer Engineering in the competition of ExpoAndes, \textbf{Universidad de Los Andes}, \textbf{Ranking 1/15}}}
 
@@ -125,7 +160,7 @@
 
 
 %----------------------------------------------------------------------------------------
-%	Institute Positions SECTION
+%	Leadership and Volunteering SECTION
 %----------------------------------------------------------------------------------------
 
 \section{Leadership and Volunteering}
@@ -150,16 +185,8 @@
 \cvitem{2015.2--2018.1} {\textit{Foundation of emotional intelligence MAZAL, helping drug addicts overcome their emotional conflicts}}
 
 
-
-
-
-
-
-
-
-
 %----------------------------------------------------------------------------------------
-%	Skills SECTION
+%	Skills and Technical Abilities SECTION
 %----------------------------------------------------------------------------------------
 
 \section{Skills and Technical Abilities}
@@ -173,33 +200,6 @@
 \cvitem{Databases}{\textsc{AWS services, MongoDB, PostgreSQL, DB2IBM and MySQL}}
 \cvitem{User Research}{\textsc{Surveys and quantitative analysis}}
 \cvitem{Languages}{\textsc{Native Spanish and Fluid English with high proficiency (107 TOEFL)}}
-
-
-
-
-
-
-
-
-%----------------------------------------------------------------------------------------
-%	Coursework SECTION
-%----------------------------------------------------------------------------------------
-
-%\cvlistdoubleitem{Basics of Electricity & Magnetism}{Computer Programming and Utilization}
-
-%----------------------------------------------------------------------------------------
-%	COMMUNICATION SKILLS SECTION
-%----------------------------------------------------------------------------------------
-
-
-%----------------------------------------------------------------------------------------
-%	LANGUAGES SECTION
-%----------------------------------------------------------------------------------------
-
-
-%----------------------------------------------------------------------------------------
-%	COVER LETTER
-%----------------------------------------------------------------------------------------
 
 % To remove the cover letter, comment out this entire block
 
