--- a/main.tex
+++ b/main.tex
@@ -45,12 +45,11 @@
 
 
 % All information in this block is optional, comment out any lines you don't need
-%\title{Curriculum Vitae}
-%\address{Address}{City, State Zip}
+\title{Curriculum Vitae/Resume}
+
 \email{re.gonzalez10@uniandes.edu.co}
 %\homepage{www.ricardo-gonzalez-penuela.com}  % The first argument is the url for the clickable link, the second argument is the url displayed in the template - this allows special characters to be displayed such as the tilde in this example
 \homepage{www.ricardo-gonzalez-penuela.com}
-%\extrainfo{DOB: September 15, 1997}
 %\photo[70pt][0.4pt]{pictures/House} % The first bracket is the picture height, the second is the thickness of the frame around the picture (0pt for no frame)
 %\quote{"A witty and playful quotation" - John Smith}
 %----------------------------------------------------------------------------------------
@@ -71,7 +70,7 @@
 %----------------------------------------------------------------------------------------
 \section{Research Job Experience}
 
-\cvitem{2019.5--2019.8}{\textit{\textbf{Research Assistant Intern} at \textbf{Cornell Tech} in the Enhancing Ability Lab (\textbf{Accessibility}) with \href{http://shiriazenkot.com/}{Assistant Professor \textcolor{blue}{Shiri Azenkot}, under the program SURF ``Summer Undergraduate \textbf{Research Fellowship}``}}}
+\cvitem{2019.5--2019.8}{\textit{\textbf{Research Assistant Intern} at \textbf{Cornell Tech} at the Enhancing Ability Lab (\textbf{Accessibility}) with \href{http://shiriazenkot.com/}{Assistant Professor \textcolor{blue}{Shiri Azenkot}, under the program SURF ``Summer Undergraduate \textbf{Research Fellowship}``}}}
 \cvitem{}{\texit{Developed a pipeline for teachers of the visually impaired (TVI) to design and use interactive 3d models to teach visually impaired students}}
 
 \cvitem{}{\texit{Redesigned and improved a modelling plugin, \href{https://github.com/rgonzalezp/Markit}{\textcolor{blue}{Markit}}, for TVI's to annotate models. In Blender, 3d modelling software, through Python scripting}}
@@ -79,17 +78,17 @@
 \cvitem{}{\texit{Modified \href{http://leiatlarge.com/3d_prints_cv/}{\textcolor{blue}{Talkit}}, the iOS application, to be compatible with the pipeline. This means making possible to download inside Talkit the models hosted in the website}}
 
 
-\cvitem{2019.8--Present}{\textit{\textbf{Research Assistant Volunteer} at \textbf{Cornell Tech} in the Enhancing Ability Lab (\textbf{Accessibility}) with \href{http://shiriazenkot.com/}{Assistant Professor \textcolor{blue}{Shiri Azenkot}}}}
+\cvitem{2019.8--Present}{\textit{\textbf{Research Assistant Volunteer} at \textbf{Cornell Tech} at the Enhancing Ability Lab (\textbf{Accessibility}) with \href{http://shiriazenkot.com/}{Assistant Professor \textcolor{blue}{Shiri Azenkot}}}}
 \cvitem{}{\texit{Continuing to work on the deployment of the 3D interactive models pipeline to make it usable by the public}}
 
-\cvitem{}{\texit{Presented \textbf{Molder} demo in \textbf{ASSETS `19} on behalf of \href{http://shiriazenkot.com/}{Professor \textcolor{blue}{Shiri}} and \href{http://leiatlarge.com/research/}{\textcolor{blue}{Lei Shi}}, see more in the Research Work section}}
+\cvitem{}{\texit{Presented \textbf{Molder} demo at \textbf{ASSETS `19} on behalf of \href{http://shiriazenkot.com/}{Professor \textcolor{blue}{Shiri}} and \href{http://leiatlarge.com/research/}{\textcolor{blue}{Lei Shi}}, see more in the Research Work section}}
  
 
 \cvitem{2019.2--Present}{\textit{\textbf{Research Assistant} at \textbf{Universidad de Los Andes}, group IMAGINE, with \href{https://www.researchgate.net/profile/Jose_Hernandez210}{Associate Professor \textcolor{blue}{Jose Tiberio Hernandez}}}}
 \cvitem{}{\texit{Develop an \textbf{educational platform} to \textbf{innovate} the way students` access and study Radiographies in the Radiology discipline:}}
 \cvitem{}{\texit{Designed and developed a prototype of a web-solution in which Radiology students can \textbf{study} and \textbf{explore ``data samples``} of subjects of interest through \textbf{data visualizations}. Students can also explore in depth Radiographies, using a Radiography Web-viewer. Paper in progress.}}
-\cvitem{}{\texit{\textbf{Obtained 60.000.000 Colombian pesos grant} to develop a full-fledged version of the platform and implement it in the Hospital Militar Central (Colombia, Bogota)}}
-\cvitem{}{\texit{Collaborating with a group of doctors and Radiology students in the Hospital Militar Central working in the research department of the Hospital}}
+\cvitem{}{\texit{\textbf{Obtained 60.000.000 Colombian pesos grant} to develop a full-fledged version of the platform and implement it at the Hospital Militar Central (Colombia, Bogota)}}
+\cvitem{}{\texit{Collaborating with a group of doctors and Radiology students at the Hospital Militar Central working inside the research department of the Hospital}}
 
 \cvitem{2018.8--2019.1}{\textit{\textbf{Research Assistant Volunteer} at \textbf{Universidad de Los Andes} with \href{http://johnguerra.co/}{Assistant Professor \textcolor{blue}{John Guerra-Gomez}}}}
 \cvitem{}{\texit{Developed a system, Tactiled, in which we make tactile graphics more available through machine learning and crowdsourcing}}
@@ -101,14 +100,14 @@
 %----------------------------------------------------------------------------------------
 
 \section{Research Work and Publications}
-\cvitem{Present}{\textit{\textbf{Molder}: Paper in submission, \textbf{Co-author}, \textbf{CHI2020}}}
-\cvitem{}{\texit{Molder is an accessible design tool for interactive tactile maps, an important type of printed materials that can help students learn O\&M skills. Molder provides a simplified design process and easy-to-learn functions. A designer uses Molder to design a map using tangible input techniques and accessible feedback. Molder contributes an interaction paradigm towards accessible modeling.}}
+\cvitem{Present}{\textit{\textbf{Molder: An Accessible Design Tool for Tactile Maps}: Paper in \textbf{CHI2020} (24.3\% acceptance), to appear in April 2020}}
+\cvitem{}{\texit{Authors: Lei Shi, Yuhang Zhao, \texit{\textbf{Ricardo Gonzalez}}, Elizabeth Kupferstein, Shiri Azenkot. Molder is an accessible design tool for interactive tactile maps, an important type of printed materials that can help students learn O\&M skills.}}
 
-\cvitem{2019.10}{\textit{\textbf{Tactiled}: Poster in \textbf{ASSETS `19} (\%58 acceptance)}}
+\cvitem{2019.10}{\textit{\textbf{Tactiled}: Poster in \textbf{ASSETS `19} (58\% acceptance)}}
 \cvitem{}{\texit{\textbf{Gonzalez, R.}, Gonzalez, C., \& Guerra-Gomez, J. A. (2019). Tactiled. The 21st International ACM SIGACCESS Conference on Computers and Accessibility - ASSETS ’19. Presented at the The 21st International ACM SIGACCESS Conference.}}
 
 \cvitem{2019.8}{\textit{\href{https://github.com/rgonzalezp/Markit}{\textcolor{blue}{Markit}}}}
-\cvitem{}{\texit{\textbf{Ricardo Enrique Gonzalez Penuela}, \& Lei Shi. (2019, November 2). rgonzalezp/Markit: Markit V1.0 (Version V1.0). Zenodo. http://doi.org/10.5281/zenodo.3526177}}
+\cvitem{}{\texit{Lei Shi, \& \textbf{Ricardo Enrique Gonzalez Penuela}. (2019, November 2). rgonzalezp/Markit: Markit V1.0 (Version V1.0). Zenodo. http://doi.org/10.5281/zenodo.3526177}}
 
 
 
@@ -151,7 +150,7 @@
 \cvitem{}{\textit{\textbf{Media}}}
 \cvitem{2019.6}{\textit{Note on \textbf{Assistive Technologies} work in \textbf{El Espectador} newspaper: \href{https://www.elespectador.com/noticias/ciencia/ingenieros-colombianos-desarrollan-herramientas-para-ayudar-personas-ciegas-articulo-870825}{\textcolor{blue}{``Colombian engineers develop tools to help blind people``}}}}
 \cvitem{}{\textit{\textbf{Award}}}
-\cvitem{2017.10}{\textit{\textbf{2nd place} in the II \textbf{security marathon}: Inter-university competition with security problems like CTF 365 held in the \textbf{Universidad de Los Andes}. Challenges related to: Networking, stenography, cryptography, reverse engineering.\href{https://uniandes.edu.co/noticias/educacion/segunda-version-de-las-maratones-de-seguridad}{\textcolor{blue}{``II security marathon``}}}}
+\cvitem{2017.10}{\textit{\textbf{2nd place} in the II \textbf{security marathon}: Inter-university competition with security problems like CTF 365 held at the \textbf{Universidad de Los Andes}. Challenges related to: Networking, stenography, cryptography, reverse engineering.\href{https://uniandes.edu.co/noticias/educacion/segunda-version-de-las-maratones-de-seguridad}{\textcolor{blue}{``II security marathon``}}}}
 \cvitem{}{\textit{\textbf{Award}}}
 \cvitem{2015.5}{\textit{\textbf{Best} undergraduate \textbf{freshman project} in the Department of Systems and Computer Engineering in the competition of ExpoAndes, \textbf{Universidad de Los Andes}, \textbf{Ranking 1/15}}}
 
@@ -177,7 +176,7 @@
 
 \cvitem{}{\textit{\textbf{Leadership}}}
 \cvitem{2016.12--2017-12}{\textit{\textbf{Student Representative} of the Department of Systems and Computer Engineering, \textbf{Universidad de Los Andes}}}
-\cvitem{}{\textit{Chosen, through a \textbf{democratic election},  as representative in a department with a population of over \textbf{1000 students}}}
+\cvitem{}{\textit{Chosen, through a \textbf{democratic election},  as representative of a department with a population of over \textbf{1000 students}}}
 %\cvitem{}{\textit{The role of the student representative is to participate in the academic board of the department and manage students-professors relationship}}
 
 \cvitem{}{\textit{\textbf{Social Work}}}
