Updated with August 1st 2022 information (2 accepted papers, 1 submission, information about XR Access, and DLI fellowship

--- a/main.tex
+++ b/main.tex
@@ -6,8 +6,6 @@
 % This template has been downloaded from:
 % http://www.LaTeXTemplates.com
 %
-% Original author:
-% Xavier Danaux (xdanaux@gmail.com)
 %
 % License:
 % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
@@ -19,7 +17,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%----------------------------------------------------------------------------------------
+%---------------------------------------------------------------------https://www.overleaf.com/project/5dbf222255799b000143f25f-------------------
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
 
@@ -31,7 +29,6 @@
 \moderncvcolor{blue} % CV color - options include: 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
 \usepackage{xcolor}
 \usepackage{lipsum} % Used for inserting dummy 'Lorem ipsum' text into the template
-\usepackage{hyperref}
 \usepackage[scale=0.8]{geometry} % Reduce document margins
 %\setlength{\hintscolumnwidth}{3cm} % Uncomment to change the width of the dates column
 \setlength{\makecvtitlenamewidth}{10cm} % For the 'classic' style, uncomment to adjust the width of the space allocated to your name
@@ -41,15 +38,14 @@
 %	NAME AND CONTACT INFORMATION SECTION
 %----------------------------------------------------------------------------------------
 
-\firstname{Ricardo Gonzalez Penuela } % Your first name
+\firstname{Ricardo E. Gonzalez Penuela } % Your first name
 
 
 % All information in this block is optional, comment out any lines you don't need
 \title{Curriculum Vitae/Resume}
 
-\email{re.gonzalez10@uniandes.edu.co}
-%\homepage{www.ricardo-gonzalez-penuela.com}  % The first argument is the url for the clickable link, the second argument is the url displayed in the template - this allows special characters to be displayed such as the tilde in this example
-\homepage{www.ricardo-gonzalez-penuela.com}
+\email{reg258@cornell.edu}
+\homepage{https://rgonzalezp.github.io/} % The first argument is the url for the clickable link, the second argument is the url displayed in the template - this allows special characters to be displayed such as the tilde in this example
 %\photo[70pt][0.4pt]{pictures/House} % The first bracket is the picture height, the second is the thickness of the frame around the picture (0pt for no frame)
 %\quote{"A witty and playful quotation" - John Smith}
 %----------------------------------------------------------------------------------------
@@ -63,65 +59,70 @@
 
 \section{Education}
 
-\cventry{2015.1--2019.12}{B. Eng. in Systems and Computer Engineering}{}{}{\textit{Department of Systems and Computer Engineering, \link[\textbf{Universidad de Los Andes}]{https://sistemas.uniandes.edu.co/en/}, Bogota, Colombia }}{}
+\cventry{2021.1--Present}{Doctor of Philosophy (Ph.D.) in Information Science}{}{}{\textit{Information Science Department, \link[Cornell Tech, Cornell University]{https://www.tech.cornell.edu/}, New York, United States }}{}
 
-%----------------------------------------------------------------------------------------
-%	Research Job Experience SECTION
-%----------------------------------------------------------------------------------------
-\section{Research Job Experience}
-
-\cvitem{2019.5--2019.8}{\textit{\textbf{Research Assistant Intern} at \textbf{Cornell Tech} at the Enhancing Ability Lab (\textbf{Accessibility}) with \href{http://shiriazenkot.com/}{Assistant Professor \textcolor{blue}{Shiri Azenkot}, under the program SURF ``Summer Undergraduate \textbf{Research Fellowship}``}}}
-\cvitem{}{\texit{Developed a pipeline for teachers of the visually impaired (TVI) to design and use interactive 3d models to teach visually impaired students}}
-
-\cvitem{}{\texit{Redesigned and improved a modelling plugin, \href{https://github.com/rgonzalezp/Markit}{\textcolor{blue}{Markit}}, for TVI's to annotate models. In Blender, 3d modelling software, through Python scripting}}
-\cvitem{}{\texit{Designed, developed and deployed a website (including front end and back end) to host the models through AWS}}
-\cvitem{}{\texit{Modified \href{http://leiatlarge.com/3d_prints_cv/}{\textcolor{blue}{Talkit}}, the iOS application, to be compatible with the pipeline. This means making possible to download inside Talkit the models hosted in the website}}
+\cventry{2015.1--2019.12}{B. Eng. in Systems and Computer Engineering}{}{}{\textit{Department of Systems and Computer Engineering, \link[Universidad de Los Andes]{https://sistemas.uniandes.edu.co/en/}, Bogota, Colombia }}{}
 
 
-\cvitem{2019.8--Present}{\textit{\textbf{Research Assistant Volunteer} at \textbf{Cornell Tech} at the Enhancing Ability Lab (\textbf{Accessibility}) with \href{http://shiriazenkot.com/}{Assistant Professor \textcolor{blue}{Shiri Azenkot}}}}
-\cvitem{}{\texit{Continuing to work on the deployment of the 3D interactive models pipeline to make it usable by the public}}
 
-\cvitem{}{\texit{Presented \textbf{Molder} demo at \textbf{ASSETS `19} on behalf of \href{http://shiriazenkot.com/}{Professor \textcolor{blue}{Shiri}} and \href{http://leiatlarge.com/research/}{\textcolor{blue}{Lei Shi}}, see more in the Research Work section}}
- 
-
-\cvitem{2019.2--Present}{\textit{\textbf{Research Assistant} at \textbf{Universidad de Los Andes}, group IMAGINE, with \href{https://www.researchgate.net/profile/Jose_Hernandez210}{Associate Professor \textcolor{blue}{Jose Tiberio Hernandez}}}}
-\cvitem{}{\texit{Develop an \textbf{educational platform} to \textbf{innovate} the way students` access and study Radiographies in the Radiology discipline:}}
-\cvitem{}{\texit{Designed and developed a prototype of a web-solution in which Radiology students can \textbf{study} and \textbf{explore ``data samples``} of subjects of interest through \textbf{data visualizations}. Students can also explore in depth Radiographies, using a Radiography Web-viewer. Paper in progress.}}
-\cvitem{}{\texit{\textbf{Obtained 60.000.000 Colombian pesos grant} to develop a full-fledged version of the platform and implement it at the Hospital Militar Central (Colombia, Bogota)}}
-\cvitem{}{\texit{Collaborating with a group of doctors and Radiology students at the Hospital Militar Central working inside the research department of the Hospital}}
-
-\cvitem{2018.8--2019.1}{\textit{\textbf{Research Assistant Volunteer} at \textbf{Universidad de Los Andes} with \href{http://johnguerra.co/}{Assistant Professor \textcolor{blue}{John Guerra-Gomez}}}}
-\cvitem{}{\texit{Developed a system, Tactiled, in which we make tactile graphics more available through machine learning and crowdsourcing}}
-\cvitem{}{\texit{Worked on the architecture of the Machine Learning model that classifies whether images can be transformed into a reliable tactile version of the image or not}}
-\cvitem{}{\texit{Worked on the web application design and development. This system is hosted on google cloud platform and managed through cloud functions}}
 
 %----------------------------------------------------------------------------------------
 %	Research Work and Publications SECTION
 %----------------------------------------------------------------------------------------
 
 \section{Research Work and Publications}
-\cvitem{Present}{\textit{\textbf{Molder: An Accessible Design Tool for Tactile Maps}: Paper in \textbf{CHI2020} (24.3\% acceptance), to appear in April 2020}}
-\cvitem{}{\texit{Authors: Lei Shi, Yuhang Zhao, \texit{\textbf{Ricardo Gonzalez}}, Elizabeth Kupferstein, Shiri Azenkot. Molder is an accessible design tool for interactive tactile maps, an important type of printed materials that can help students learn O\&M skills.}}
+\cvitem{2022.10}{\textit{\textbf{Hands-On: Using Gestures to Control Descriptions of a Virtual Environment for People with Visual Impairments}:  Paper in submission \textbf{UIST2022}}}
+\cvitem{}{\textit{\textbf{Ricardo E. Gonzalez Penuela}, Wren Poremba, Christina Trice, \& Shiri Azenkot. While researchers have explored how to make navigation and object perception more accessible in VR, none have offered a natural way to request descriptions of objects, nor control the flow of auditory information. We present a haptic glove that PVI can use to request object descriptions with their hands through hand gestures.}}
 
-\cvitem{2019.10}{\textit{\textbf{Tactiled}: Poster in \textbf{ASSETS `19} (58\% acceptance)}}
-\cvitem{}{\texit{\textbf{Gonzalez, R.}, Gonzalez, C., \& Guerra-Gomez, J. A. (2019). Tactiled. The 21st International ACM SIGACCESS Conference on Computers and Accessibility - ASSETS ’19. Presented at the The 21st International ACM SIGACCESS Conference.}}
+\cvitem{2022.10}{\textit{\textbf{Uncovering Visually Impaired Gamers' Preference for Spatial Awareness Tools Within Video Games}: Accepted paper to appear in \textbf{ASSETS `22} (26.5\% acceptance)}}
+\cvitem{}{\textit{Authors: Vishnu Nair, Shao-en Ma, \textit{\textbf{Ricardo E. Gonzalez Penuela}}, Yicheng He, Karen Lin, Mason Hayes, Hannah Huddleston,   Matthew Donnelly, Brian A. Smith. We investigated four leading approaches to facilitate spatial awareness for visually impaired gamers within a 3D video game. We uncover what is the most important information for visually impaired gamers to gain spatial awareness, and how well our spatial awareness tools provide it.}}
+
+\cvitem{2022.10}{\textit{\textbf{Understanding How People with Visual Impairments Take Selfies: Experiences and Challenges}:  Accepted poster to appear in \textbf{ASSETS `22} (59\% acceptance)}}
+\cvitem{}{\textit{\textbf{Ricardo E. Gonzalez Penuela}, Paul Vermette, Zihan Yan, Cheng Zhang, Keith Vertanen, \& Shiri Azenkot. Selfies are a pervasive form of communication in social media. PVI want to participate in social media just like their sighted counterparts, so it is important to ensure that selfie-taking is accessible. We contribute design guidelines that researchers and designers can implement for creating accessible selfie-taking applications.}}
+
+
+\cvitem{2021.10}{\textit{\textbf{Towards a Generalized Acoustic Minimap for Visually Impaired Gamers}: Demo in \textbf{UIST2021} (Overall acceptance 21\%)}}
+\cvitem{}{\textit{Authors: Vishnu Nair, Shao-en Ma,Hannah Huddleston, Karen Lin, Mason Hayes, Matthew Donnelly, \textit{\textbf{Ricardo E. Gonzalez Penuela}}, Yicheng He, Brian A. Smith. We developed a prototype with four acoustic minimap techniques which would enable visually impaired gamers gain spatial awareness of a game environment.}}
+
+\cvitem{2020.4}{\textit{\textbf{Molder: An Accessible Design Tool for Tactile Maps}: Paper in \textbf{CHI2020} (24.3\% acceptance)}}
+\cvitem{}{\textit{Authors: Lei Shi, Yuhang Zhao, \textit{\textbf{Ricardo E. Gonzalez Penuela}}, Elizabeth Kupferstein, Shiri Azenkot. Molder is an accessible design tool for interactive tactile maps, an important type of printed materials that can help visually impaired students learn O\&M skills.}}
+
+\cvitem{2019.10}{\textit{\textbf{Tactiled: Towards more and better tactile graphics using machine learning}: Poster in \textbf{ASSETS `19} (58\% acceptance)}}
+\cvitem{}{\textit{\textbf{Gonzalez, R.}, Gonzalez, C., \& Guerra-Gomez, J. A. (2019). Tactiled. The 21st International ACM SIGACCESS Conference on Computers and Accessibility - ASSETS 2019. Presented at the The 21st International ACM SIGACCESS Conference.}}
 
 \cvitem{2019.8}{\textit{\href{https://github.com/rgonzalezp/Markit}{\textcolor{blue}{Markit}}}}
-\cvitem{}{\texit{Lei Shi, \& \textbf{Ricardo Enrique Gonzalez Penuela}. (2019, November 2). rgonzalezp/Markit: Markit V1.0 (Version V1.0). Zenodo. http://doi.org/10.5281/zenodo.3526177}}
-
-
+\cvitem{}{\textit{Lei Shi, \& \textbf{Ricardo E. Gonzalez Penuela}. (2019, November 2). rgonzalezp/Markit: Markit V1.0 (Version V1.0). Zenodo. http://doi.org/10.5281/zenodo.3526177}}
 
 %----------------------------------------------------------------------------------------
-%	Industry Job Experience SECTION
+%	Research community involvement SECTION
 %----------------------------------------------------------------------------------------
-\section{Industry Job Experience}
 
-\cvitem{2018.1--2018.6}{\textbf{Developer/Test Automation intern} at \textbf{Endava}, a British based software development company}
-\cvitem{}{\textit{Developed new modules for a test accelerator, a framework used by the company to create testing suites for new software products}}
+\section{Research Community Involvement}
+\cvitem{}{\textit{\textbf{Community}}}
+\cvitem{2021.1-- Present}{\textit{\href{https://xraccess.org/research/}{\textcolor{blue}{XR Access Research Network}}. Working closely together with  \href{https://xraccess.org/about/}{Professor \textcolor{blue}{Shiri Azenkot}}, Co-Founder of \href{https://xraccess.org/}{\textcolor{black}{XR Access}}, to run all activities related to the XR Access Research Network. This includes:}}
+\cvitem{}{Organizing, recruiting speakers, and hosting the \href{https://xraccess.org/research/}{\textbf{XR Access Research Network Seminar}.} We have brought over 7 community leaders in the space of XR Accessibility to share their work.}
+\cvitem{}{Mentoring in the \href{https://xraccess.org/reu/}{\textbf{REU site} (Research Experience for Undergrads)} program \textbf{hosted by the XR Access Research Network} and \textbf{funded by the NSF}, Summers of 2021, and 2022. At both opportunities, fully-funded undergrad students collaborated in projects that have become submissions/fully-published papers at significant conferences (ASSETS,CHI, UIST) or that are currently in submission.}
+\cvitem{}{Recruiting speakers, and hosting the \href{https://www.youtube.com/watch?v=ZG0w6l4qRr4&list=PLIpr16Y-xnVlXThQPqkvnQuY8GyiDjgEn&index=7}{\textbf{Research to Practice Panel}} at the \href{https://xraccess.org/symposium/}{\textbf{XR Access Symposium 2022}}.}
 
-\cvitem{} {\textit{Automated UI tests for social media platforms}}
+\cvitem{}{\textit{\textbf{Peer Reviewing}}}
+\cvitem{}{\textit{Reviewer at \href{https://mobilehci.acm.org/2022/}{\textcolor{black}{Mobile HCI 2022}}.}}
 
-\cvitem{} {\textit{\textbf{Key Technologies}: Java, Selenium, Cucumber, Serenity, Postman, Git, DB2, Jenkins, AWS, Maven, Jira and JMeter}}
+%----------------------------------------------------------------------------------------
+%	Awards and Media SECTION
+%----------------------------------------------------------------------------------------
+
+\section{Awards and Media}
+\cvitem{}{\textit{\textbf{Fellowships \& Grants}}}
+\cvitem{Fall 2022-- Fall 2023}{\textit{Recipient  of the Digital Life Initiative (DLI) \textbf{Doctoral Fellowship}. \href{https://www.dli.tech.cornell.edu/join}{\textcolor{black}{``The Program engages students in systematic inquiry into ethical and political implications of the digital age. Such inquiry centers on issues – e.g. fairness, security, privacy, and accountability – that concern existing and emergent digital technologies.``}}}}
+\cvitem{}{\textit{\textbf{Media}}}
+\cvitem{2019.6}{\textit{Note on \textbf{Assistive Technologies} work in Colombian newspaper \textbf{El Espectador}: \href{https://www.elespectador.com/noticias/ciencia/ingenieros-colombianos-desarrollan-herramientas-para-ayudar-personas-ciegas-articulo-870825}{\textcolor{blue}{``Colombian engineers develop tools to help blind people``}}}}
+
+
+
+
+
+
+
 
 
 
@@ -130,75 +131,27 @@
 %----------------------------------------------------------------------------------------
 \section{Teaching Job Experience}
 
-\cvitem{Spring 2019} {\textit{Teacher assistant: \textbf{Programming with web technologies}, Senior year course, fundamental to learn how to use web development tools and students need to use all previous courses knowledge to develop multiple full stack solutions. \textbf{Universidad de Los Andes}}}
-
-\cvitem{} {\textit{Worked with Assistant Professor Jose Bocanegra to develop the course material}}
-
-\cvitem{Spring 2016, Fall 2016} {\textit{Teacher assistant: \textbf{Object oriented programming II}, Freshman year course, students learn recursive programming, sorting algorithms and other fundamentals of programming. \textbf{Universidad de Los Andes}}}
-
-\cvitem{} {\textit{Aided the Professor to grade the students exams, homework and supported in the teaching/lab sessions}}
-
-
-
-
+\cvitem{Spring 2021} {\textit{Teacher assistant for class INFO 5305: \textbf{User Experience and User Research methods},
+\textbf{Cornell Tech}, with Professor Shiri Azenkot}}
 
 %----------------------------------------------------------------------------------------
-%	Awards and Media SECTION
+%	Research Job Experience SECTION
 %----------------------------------------------------------------------------------------
+\section{Research Job Experience}
 
-\section{Awards and Media}
-\cvitem{}{\textit{\textbf{Media}}}
-\cvitem{2019.6}{\textit{Note on \textbf{Assistive Technologies} work in \textbf{El Espectador} newspaper: \href{https://www.elespectador.com/noticias/ciencia/ingenieros-colombianos-desarrollan-herramientas-para-ayudar-personas-ciegas-articulo-870825}{\textcolor{blue}{``Colombian engineers develop tools to help blind people``}}}}
-\cvitem{}{\textit{\textbf{Award}}}
-\cvitem{2017.10}{\textit{\textbf{2nd place} in the II \textbf{security marathon}: Inter-university competition with security problems like CTF 365 held at the \textbf{Universidad de Los Andes}. Challenges related to: Networking, stenography, cryptography, reverse engineering.\href{https://uniandes.edu.co/noticias/educacion/segunda-version-de-las-maratones-de-seguridad}{\textcolor{blue}{``II security marathon``}}}}
-\cvitem{}{\textit{\textbf{Award}}}
-\cvitem{2015.5}{\textit{\textbf{Best} undergraduate \textbf{freshman project} in the Department of Systems and Computer Engineering in the competition of ExpoAndes, \textbf{Universidad de Los Andes}, \textbf{Ranking 1/15}}}
+\cvitem{2019.5--2019.8}{\textit{\textbf{Research Assistant Intern} at \textbf{Cornell Tech} at the Enhancing Ability Lab (\textbf{Accessibility}) with \href{http://shiriazenkot.com/}{ Professor \textcolor{blue}{Shiri Azenkot}, ``Summer Undergraduate \textbf{Research Fellowship}``}}}
+\cvitem{}{}
 
 
+\cvitem{2019.8--2020.12}{\textit{\textbf{Research Assistant} at \textbf{Cornell Tech} at the Enhancing Ability Lab (\textbf{Accessibility}) with \href{http://shiriazenkot.com/}{Professor \textcolor{blue}{Shiri Azenkot}}}}
+
+\cvitem{}{\textit{Presented \textbf{Molder} demo at \textbf{ASSETS `19} on behalf of \href{http://shiriazenkot.com/}{Professor \textcolor{blue}{Shiri}} and \href{https://scholar.google.com/citations?user=BxSTxa0AAAAJ&hl=en}{\textcolor{blue}{Lei Shi}}, see more in the Research Work section}}
 
 
 
 %----------------------------------------------------------------------------------------
 %	Leadership and Volunteering SECTION
 %----------------------------------------------------------------------------------------
-
-\section{Leadership and Volunteering}
-
-\cvitem{}{\textit{\textbf{Leadership}}}
-\cvitem{2017.6--2018.2}{\textit{\textbf{Co-Founder of the Ciicep}, ``Center of investigation, innovation and creation for undergrad students``, \textbf{Universidad de Los Andes}}}
-\cvitem{}{\textit{Alternative way to finance the university through \textbf{research and industry projects}}}
-\cvitem{}{\textit{Negotiated an annual budget provided by the rector of the \textbf{Universidad de Los Andes} of \textbf{50.000.000 Colombian pesos} to pay a salary to prominent students working inside the Ciicep and also fund the operation}}
-%\cvitem{}{\textit{Help students with good academic background to work in research projects with Industry}}
-
-\cvitem{}{\textit{\textbf{Leadership}}}
-\cvitem{2017.4--2018.1}{\textit{\textbf{Member of the directors` board ACM}, in local students` group at \textbf{Universidad de Los Andes}}}
-\cvitem{}{\textit{Organized local group activities, small videogame and programming events and assisted inter-university meetings}}
-
-\cvitem{}{\textit{\textbf{Leadership}}}
-\cvitem{2016.12--2017-12}{\textit{\textbf{Student Representative} of the Department of Systems and Computer Engineering, \textbf{Universidad de Los Andes}}}
-\cvitem{}{\textit{Chosen, through a \textbf{democratic election},  as representative of a department with a population of over \textbf{1000 students}}}
-%\cvitem{}{\textit{The role of the student representative is to participate in the academic board of the department and manage students-professors relationship}}
-
-\cvitem{}{\textit{\textbf{Social Work}}}
-
-\cvitem{2015.2--2018.1} {\textit{Foundation of emotional intelligence MAZAL, helping drug addicts overcome their emotional conflicts}}
-
-
-%----------------------------------------------------------------------------------------
-%	Skills and Technical Abilities SECTION
-%----------------------------------------------------------------------------------------
-
-\section{Skills and Technical Abilities}
-%
-\cvitem{Programming}{\textsc{Swift, JavaScript, Python, Java and Processing}}
-\cvitem{3D Modelling}{\textsc{Blender}}
-\cvitem{Web Dev}{\textsc{React, NodeJS, HTML5, CSS Angular, TensorFlowJS and Vega-lite}}
-\cvitem{Prototyping and design}{\textsc{Sketch, Illustrator, and Photoshop}}
-\cvitem{3rd party services}{\textsc{Amazon Rekognition, Google Cloud, Firebase DB and Authentication}}
-\cvitem{Protocols and APIs}{\textsc{Rest, Json and XML}}
-\cvitem{Databases}{\textsc{AWS services, MongoDB, PostgreSQL, DB2IBM and MySQL}}
-\cvitem{User Research}{\textsc{Surveys and quantitative analysis}}
-\cvitem{Languages}{\textsc{Native Spanish and Fluid English with high proficiency (107 TOEFL)}}
 
 % To remove the cover letter, comment out this entire block
 
